--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -4,6 +4,9 @@
       Affichage de résultats
     </ion-title>
   </ion-navbar>
+  <ion-searchbar>
+
+  </ion-searchbar>
 </ion-header>
 
 <ion-content padding>
